# sscep

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYRIGHT  ChangeLog  Configure  HISTORY  Imakefile  Makefile  Makefile.am  Makefile.in  Makefile.w32  README  README.install  README.md  README.packaging  README_MakefileW32.txt  Release.checklist.md  TODO  VERSION  aclocal.m4  autogen.sh  bootstrap.sh  cmd.h  conf.h  config.h.in  configuration.c  configuration.h  configure  configure.ac  draft-gutmann-scep-05.txt  draft-gutmann-scep-14.txt  draft-nourse-scep-06.txt  draft-nourse-scep-11.txt  engine.c  engine.h  fileutils.c  fileutils_capi.c  fileutils_capi.h  (+12 more)
.github/workflows/: ccpp.yml
AIX/: Makefile  TODO  lpp_name.cn  lpp_name.in.cn  lpp_template.in  make_AIX_package.sh  override_inventory  sscep.post-install.sh  sscep.pre-deinstall.sh  sscep.pre-install.sh  sscep.unconfiguration.sh
Linux/: Makefile  make_Linux_package.sh  sscep-dyn.spec.in  sscep-static.spec.in  sscep.spec.in
Solaris/: Makefile  Prototype  make_Solaris_package.sh  pkginfo.template
doc/: README.AIX  Release.checklist.md  draft-nourse-scep-06.txt  rfc8894.txt
doc/examples/: mkrequest
engines/: sscep_capi.c  sscep_capi.h
scripts/: sscep.spec
src/: cmd.h  conf.h  configuration.c  configuration.h  engine.c  engine.h  fileutils.c  fileutils_capi.c  getopt.c  ias.c  init.c  net.c  pkcs7.c  sceputils.c  sscep.c  sscep.h
src/engines/: sscep_capi.c  sscep_capi.h
t/: 01_basic_tests.t  05_getcrl.t
